--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE ffhtml>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site-escola</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>vai ser uma imagem aqui</h1>
-<header>
-    <img src="alurastart logo 1.png" alt="">
-    <ul>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" <ul>
         <li>Estudante</li>
         <li>Escola</li>
-    </ul>
-</header>
+        </ul>
+    </header>
 
 </body>
+
 </html>
